@@ -1,3 +1,15 @@
+2001-08-01  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c (create_root_password_dialog) pass a gchar here
+	as a argument for the dialog text. This way a seperate dialog
+	asking if the user wants to enter the password is not needed. 
+	Beautify the dialog a bit
+	(create_renice_dialog) change the button to read Change Priority
+	instead of renice.
+
+	* procactions.c: pass the root password text to 
+	create_root_passsword_dialog
+
 2001-08-31   Kevin Vandersloot <kfv101@psu.edu>
 
 	* interface.c: left justify the disk name and mount point
